--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 user  nginx;
 worker_processes  1;
-error_log  /var/log/nginx/error.log info;
+error_log  /var/log/nginx/error_1.log warn;
 pid        /var/run/nginx.pid;
 events {
   worker_connections  1024;
@@ -11,7 +11,7 @@ http {
   log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                     '$status $body_bytes_sent "$http_referer" '
                     '"$http_user_agent" "$http_x_forwarded_for"';
-  access_log  /var/log/nginx/access.log  main;
+  access_log  /var/log/nginx/access_1.log  main;
   sendfile        on;
   keepalive_timeout  65;
   server {
