Heroku用に、環境変数からPORTを取得しnginxのlistenポートを動的に設定するよう変更

--- a/nginx.conf
+++ b/nginx.conf
@@ -14,17 +14,8 @@ http {
   access_log  /var/log/nginx/access_1.log  main;
   sendfile        on;
   keepalive_timeout  65;
-  server {
-    listen       80;
-    server_name  localhost;
-    location / {
-      root   /app;
-      index  index.html;
-      try_files $uri $uri/ /index.html;
-    }
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-      root   /usr/share/nginx/html;
-    }
-  }
+  
+  # server関連の設定は以下ファイルから読み込む
+  include /etc/nginx/conf.d/*.conf;
+
 }
