ローカルでのテストでもherokuと同様に環境変数にPORT設定するよう変更

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,9 +3,12 @@ version: "3.7"
 services:     
     web:
         # buildはせず、存在するdocker imageを利用するよう指定
-        image: yakitori99/trip-weather-frontend:v0.1.1
+        image: yakitori99/trip-weather-frontend:v0.1.3
         ports:
             # web server
-            - 5000:80
+            - 5000:8080
         # ホストOSの起動時、コンテナの不慮の停止時などにコンテナを自動起動するよう指定
         restart: always
+        environment:
+            # Herokuと同様の設定でローカルで動かせるよう、環境変数PORTを設定
+            PORT: "8080"
