--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.1",
     "vue-router": "^3.5.2",
+    "vue-toasted": "^1.1.28",
     "vuetify": "^2.4.0",
     "vuex": "^3.6.2"
   },
